[package]
name = "rustrogue"
version = "0.1.0"
authors = ["Joosep Jääger <joosep.jaager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = "0.15"
array2d = "0.2.1"
sqlite = "0.24.0"
rand = "0.7.3"
num = "0.3.1"
